# hpfw

./: CMakeLists.txt  README.md  helpers.h  main.cpp
examples/: CMakeLists.txt  combine.cpp  live-id.cpp
examples/cpp/: CMakeLists.txt  combine.cpp  live-id.cpp
examples/python/: liveid.ipynb
fingerprint/: algo.h  handle.h  mpg123_wrapper.h
fingerprint/algo/: combiner.h  fft.h  mpg123_wrapper.h  shazam.h  spectro.h  tsai.h
hashprint/algo/: combiner.h  core.h
hpfw/: helpers.h  utils.h
hpfw/audioproblems/: combiner.h  live_song_id.h
hpfw/core/: core.h  hashprint.h
hpfw/io/: mpg123_wrapper.h
hpfw/spectrum/: convert.h  cqt.h  mel.h  spectrogram.h
include/hpfw/: utils.h
include/hpfw/audioproblems/: combiner.h  live_song_id.h
include/hpfw/audioproblems/combiner/: combiner.h
include/hpfw/audioproblems/live-song-id/: ann_storage.h  annoy_storage.h  live_song_id.h  repository.h  storage.h
include/hpfw/core/: cache.h  collector.h  hashprint.h  hashprint_handle.h  parallel_collector.h
include/hpfw/io/: mpg123_wrapper.h
include/hpfw/spectrum/: cqt.h
modules/python/: CMakeLists.txt  main.py  parallel_collector_wrapper.cpp  parallel_collector_wrapper.hpp  setup.py
modules/python/pyhpfw/: __init__.py  pyhpfw.py
